@@ -14,6 +14,13 @@ sync;sync
 #change to NTSC or SECAM or PAL
 norm=PAL
 
+if echo $LINUX_VERSION | grep '2\.4' > /dev/null
+then
+mod_ext=o
+else
+mod_ext=ko
+fi
+
 # Unload everything
 $SUDO /sbin/rmmod dc10 > /dev/null 2>&1     # Just in case if old driver was loaded
 $SUDO /sbin/rmmod zoran > /dev/null 2>&1
@@ -45,14 +52,14 @@ $SUDO /sbin/rmmod videodev > /dev/null 2>&1
 # Load driver
 
 sync;sync
-$SUDO /sbin/insmod videodev
+$SUDO /sbin/modprobe videodev
 
 # I2COPTS="scan=1"
 
-$SUDO /sbin/insmod i2c-core $I2CCOREOPTS
-$SUDO /sbin/insmod i2c-algo-bit $I2CALGOBITOPTS
+$SUDO /sbin/modprobe i2c-core $I2CCOREOPTS
+$SUDO /sbin/modprobe i2c-algo-bit $I2CALGOBITOPTS
 
-$SUDO /sbin/insmod ./videocodec.o
+$SUDO /sbin/insmod ./videocodec.$mod_ext
 
 incompat=""
 cards=""
@@ -77,70 +84,70 @@ do
     case "$1" in
     
         'dc10new')
-            $SUDO /sbin/insmod ./saa7110.o
-            $SUDO /sbin/insmod ./adv7175.o
-            $SUDO /sbin/insmod ./zr36060.o
+            $SUDO /sbin/insmod ./saa7110.$mod_ext
+            $SUDO /sbin/insmod ./adv7175.$mod_ext
+            $SUDO /sbin/insmod ./zr36060.$mod_ext
             cards="$cards $1"
             addcardnum 1 -1 -1
             ;;
         'dc10plus')
-            $SUDO /sbin/insmod ./saa7110.o
-            $SUDO /sbin/insmod ./adv7175.o
-            $SUDO /sbin/insmod ./zr36060.o
+            $SUDO /sbin/insmod ./saa7110.$mod_ext
+            $SUDO /sbin/insmod ./adv7175.$mod_ext
+            $SUDO /sbin/insmod ./zr36060.$mod_ext
             cards="$cards $1"
             addcardnum 2 -1 -1
             ;;
         'lml33')
-            $SUDO /sbin/insmod ./bt819.o
-            $SUDO /sbin/insmod ./bt856.o
-            $SUDO /sbin/insmod ./zr36060.o
+            $SUDO /sbin/insmod ./bt819.$mod_ext
+            $SUDO /sbin/insmod ./bt856.$mod_ext
+            $SUDO /sbin/insmod ./zr36060.$mod_ext
             cards="$cards $1"
             addcardnum 5 -1 -1
             ;;
         'buz')
-            $SUDO /sbin/insmod ./saa7111.o
-            $SUDO /sbin/insmod ./saa7185.o
-            $SUDO /sbin/insmod ./zr36060.o low_bitrate=1
+            $SUDO /sbin/insmod ./saa7111.$mod_ext
+            $SUDO /sbin/insmod ./saa7185.$mod_ext
+            $SUDO /sbin/insmod ./zr36060.$mod_ext low_bitrate=1
             cards="$cards $1"
             addcardnum 7 -1 -1
             ;;
         'dc30')
-            $SUDO /sbin/insmod ./vpx3220.o
-            $SUDO /sbin/insmod ./adv7175.o
-            $SUDO /sbin/insmod ./zr36016.o
-            $SUDO /sbin/insmod ./zr36050.o
+            $SUDO /sbin/insmod ./vpx3220.$mod_ext
+            $SUDO /sbin/insmod ./adv7175.$mod_ext
+            $SUDO /sbin/insmod ./zr36016.$mod_ext
+            $SUDO /sbin/insmod ./zr36050.$mod_ext
             cards="$cards $1"
             addcardnum 3 -1 -1
             ;;
         'dc30plus')
-            $SUDO /sbin/insmod ./vpx3220.o
-            $SUDO /sbin/insmod ./adv7175.o
-            $SUDO /sbin/insmod ./zr36016.o
-            $SUDO /sbin/insmod ./zr36050.o
+            $SUDO /sbin/insmod ./vpx3220.$mod_ext
+            $SUDO /sbin/insmod ./adv7175.$mod_ext
+            $SUDO /sbin/insmod ./zr36016.$mod_ext
+            $SUDO /sbin/insmod ./zr36050.$mod_ext
             cards="$cards $1"
             addcardnum 4 -1 -1
             ;;
         'dc10old')
-            $SUDO /sbin/insmod ./vpx3220.o
-            #$SUDO /sbin/insmod ./mse3000.o
+            $SUDO /sbin/insmod ./vpx3220.$mod_ext
+            #$SUDO /sbin/insmod ./mse3000.$mod_ext
             echo "playback on card $1 disabled, because we don't have a TV encoder module (mse3000) yet"
-            $SUDO /sbin/insmod ./zr36016.o
-            $SUDO /sbin/insmod ./zr36050.o
+            $SUDO /sbin/insmod ./zr36016.$mod_ext
+            $SUDO /sbin/insmod ./zr36050.$mod_ext
             cards="$cards $1"
             addcardnum 0 -1 -1
             ;;
         'dc10old_vpxadv')
-            $SUDO /sbin/insmod ./vpx3220.o
-            $SUDO /sbin/insmod ./adv7175.o
-            $SUDO /sbin/insmod ./zr36016.o
-            $SUDO /sbin/insmod ./zr36050.o
+            $SUDO /sbin/insmod ./vpx3220.$mod_ext
+            $SUDO /sbin/insmod ./adv7175.$mod_ext
+            $SUDO /sbin/insmod ./zr36016.$mod_ext
+            $SUDO /sbin/insmod ./zr36050.$mod_ext
             cards="$cards $1"
             addcardnum 0 48 -1
             ;;
         'lml33r10')
-            $SUDO /sbin/insmod ./saa7114.o
-            $SUDO /sbin/insmod ./adv7170.o
-            $SUDO /sbin/insmod ./zr36060.o
+            $SUDO /sbin/insmod ./saa7114.$mod_ext
+            $SUDO /sbin/insmod ./adv7170.$mod_ext
+            $SUDO /sbin/insmod ./zr36060.$mod_ext
             cards="$cards $1"
             addcardnum 6 -1 -1
             ;;
@@ -185,6 +192,6 @@ case "$norm" in
         exit 1
         ;;
 esac
-$SUDO /sbin/insmod ./zoran.o debug=3 card=$cardnum encoder=$encnum decoder=$decnum default_norm=$normnum lock_norm=0 pass_through=0 lml33dpath=1 # v4l_bufsize=1280
+$SUDO /sbin/insmod ./zoran.$mod_ext debug=3 card=$cardnum encoder=$encnum decoder=$decnum default_norm=$normnum lock_norm=0 pass_through=0 lml33dpath=1 # v4l_bufsize=1280
 sync;sync
 echo "Drivers for '$cards' with norm '$norm' loaded"
