@@ -3,6 +3,9 @@ Version 0.9.3 -> 0.9.4
 * Add YUY2 overlay (fullscreen/hardware-scaled)
 * use __stringify() for array insmod options
 * fix stupid flaw in open() logic (could result in oops)
+* fix 2.5.x build
+* remove lots of 'dead' includes from zoran_driver.c
+* change i2c client usecounting to what's used in 2.5.x (non-dynamic)
 
 Version 0.9.2 -> 0.9.3
 ----------------------
